# blueos-coverage-logger

./: Dockerfile  README.md  conftest.py  pyproject.toml  requirements.txt
app/: coverage.py  main.py  ping2_sim.py  sonar.py  store.py  telemetry.py
app/static/: index.html
tests/: test_api.py  test_coverage.py  test_ping2.py  test_sonar.py
